Corrigiendo estilos del form de registro de usuarios

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -310,7 +310,7 @@
                                             <input type="text" class="form-control" id="register-address" placeholder="Dirección de correspondencia">
                                         </div>
                                     </div>
-                                    <div class="clo-md-6">
+                                    <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="username">Username:</label>
                                             <input type="text" class="form-control" id="register-username" placeholder="Nombre de usuario">
