--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -287,55 +287,73 @@
                         </div>
                         <div class="modal-body">
 
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="name">Nombre:</label>
-                                            <input type="text" class="form-control" id="register-name" placeholder="Su nombre">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="lastName">Apellidos:</label>
-                                            <input type="text" class="form-control" id="register-last-name" placeholder="Sus Apellidos">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="pais">Pais:</label>
-                                            <input type="text" class="form-control" id="register-country" placeholder="País de residencia">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="ciudad">Ciudad:</label>
-                                            <input type="text" class="form-control" id="register-city" placeholder="Ciudad de residencia">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="direccion">Dirección de correspondencia:</label>
-                                            <input type="text" class="form-control" id="register-address" placeholder="Dirección de correspondencia">
-                                        </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="name">Nombre:</label>
+                                        <input type="text" class="form-control" id="register-name" placeholder="Su nombre">
                                     </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="username">Username:</label>
-                                            <input type="text" class="form-control" id="register-username" placeholder="Nombre de usuario">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="password">Contraseña:</label>
-                                            <input type="password" class="form-control" id="register-password" placeholder="Contraseña">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="confirmPassword">Confirmar contraseña:</label>
-                                            <input type="password" class="form-control" id="register-confirm-password" placeholder="Confirmar contraseña">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="email">email:</label>
-                                            <input type="email" class="form-control" id="register-email" placeholder="Email">
-                                        </div>
+                                    <div class="form-group">
+                                        <label for="lastName">Apellidos:</label>
+                                        <input type="text" class="form-control" id="register-last-name" placeholder="Sus Apellidos">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="pais">Pais:</label>
+                                        <input type="text" class="form-control" id="register-country" placeholder="País de residencia">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="ciudad">Ciudad:</label>
+                                        <input type="text" class="form-control" id="register-city" placeholder="Ciudad de residencia">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="direccion">Dirección de correspondencia:</label>
+                                        <input type="text" class="form-control" id="register-address" placeholder="Dirección de correspondencia">
                                     </div>
                                 </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="username">Username:</label>
+                                        <input type="text" class="form-control" id="register-username" placeholder="Nombre de usuario">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="password">Contraseña:</label>
+                                        <input type="password" class="form-control" id="register-password" placeholder="Contraseña">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="confirmPassword">Confirmar contraseña:</label>
+                                        <input type="password" class="form-control" id="register-confirm-password" placeholder="Confirmar contraseña">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="email">email:</label>
+                                        <input type="email" class="form-control" id="register-email" placeholder="Email">
+                                    </div>
+                                </div>
+                            </div>
 
-                                <hr>
+                            <hr>
 
-                                <div class="form-group">
+                            <div class="form-group">
                                     <label for="category">Escoger categorias:</label>
                                     <div class="panel panel-default category-modal-container">
                                         <div id="category-register" class="panel-body row">
+                                            <label class="checkbox-inline">
+                                                <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
+                                            </label>
+                                            <label class="checkbox-inline">
+                                                <input type="checkbox" id="inlineCheckbox2" value="option2"> 2
+                                            </label>
+                                            <label class="checkbox-inline">
+                                                <input type="checkbox" id="inlineCheckbox3" value="option3"> 3
+                                            </label>
+                                            <label class="checkbox-inline">
+                                                <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
+                                            </label>
+                                            <label class="checkbox-inline">
+                                                <input type="checkbox" id="inlineCheckbox2" value="option2"> 2
+                                            </label>
+                                            <label class="checkbox-inline">
+                                                <input type="checkbox" id="inlineCheckbox3" value="option3"> 3
+                                            </label>
                                             <label class="checkbox-inline">
                                                 <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
                                             </label>
