Corrigiendo estilos del form de registro de usuarios

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -335,33 +335,33 @@
                             <div class="form-group">
                                     <label for="category">Escoger categorias:</label>
                                     <div class="panel panel-default category-modal-container">
-                                        <div id="category-register" class="panel-body row">
+                                        <div id="category-register" class="panel-body">
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
+                                                <input type="checkbox" id="inlineCheckbox1" value="option1"> asdas  ads a
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox2" value="option2"> 2
+                                                <input type="checkbox" id="inlineCheckbox2" value="option2"> asda sdas
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox3" value="option3"> 3
+                                                <input type="checkbox" id="inlineCheckbox3" value="option3"> 3asdasasdasd
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
+                                                <input type="checkbox" id="inlineCheckbox1" value="option1"> 1asdadasdasd
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox2" value="option2"> 2
+                                                <input type="checkbox" id="inlineCheckbox2" value="option2"> 2asda
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox3" value="option3"> 3
+                                                <input type="checkbox" id="inlineCheckbox3" value="option3"> 3asdad asasasdasd
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
+                                                <input type="checkbox" id="inlineCheckbox1" value="option1"> 1asdasdasadasd
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox2" value="option2"> 2
+                                                <input type="checkbox" id="inlineCheckbox2" value="option2"> 2asd adas sadad
                                             </label>
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox3" value="option3"> 3
+                                                <input type="checkbox" id="inlineCheckbox3" value="option3"> 3asdasd asd sada sd sad
                                             </label>
                                         </div>
                                     </div>
