Corrigiendo estilos del form de registro de usuarios

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -283,11 +283,14 @@
                     <form>
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title">Modal title</h4>
+                            <h4 class="modal-title">Registro de usuarios</h4>
                         </div>
                         <div class="modal-body">
-
-                            <div class="row">
+                            <h2>Completa los siguientes campos para guardar tu registro:</h2>
+                            <hr>
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="name">Nombre:</label>
@@ -327,45 +330,44 @@
                                         <label for="email">email:</label>
                                         <input type="email" class="form-control" id="register-email" placeholder="Email">
                                     </div>
-                                </div>
-                            </div>
-
-                            <hr>
-
-                            <div class="form-group">
-                                    <label for="category">Escoger categorias:</label>
-                                    <div class="panel panel-default category-modal-container">
-                                        <div id="category-register" class="panel-body">
-                                            <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox1" value="option1"> asdas  ads a
-                                            </label>
-                                            <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox2" value="option2"> asda sdas
-                                            </label>
-                                            <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox3" value="option3"> 3asdasasdasd
-                                            </label>
-                                            <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox1" value="option1"> 1asdadasdasd
-                                            </label>
-                                            <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox2" value="option2"> 2asda
-                                            </label>
-                                            <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox3" value="option3"> 3asdad asasasdasd
-                                            </label>
-                                            <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox1" value="option1"> 1asdasdasadasd
-                                            </label>
-                                            <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox2" value="option2"> 2asd adas sadad
-                                            </label>
-                                            <label class="checkbox-inline">
-                                                <input type="checkbox" id="inlineCheckbox3" value="option3"> 3asdasd asd sada sd sad
-                                            </label>
+                                    <div class="form-group">
+                                        <label for="category">SCategorías de interes:</label>
+                                        <div class="panel panel-default category-modal-container">
+                                            <div id="category-register" class="panel-body">
+                                                <label class="checkbox-inline">
+                                                    <input type="checkbox" id="inlineCheckbox1" value="option1"> asdas  ads a
+                                                </label>
+                                                <label class="checkbox-inline">
+                                                    <input type="checkbox" id="inlineCheckbox2" value="option2"> asda sdas
+                                                </label>
+                                                <label class="checkbox-inline">
+                                                    <input type="checkbox" id="inlineCheckbox3" value="option3"> 3asdasasdasd
+                                                </label>
+                                                <label class="checkbox-inline">
+                                                    <input type="checkbox" id="inlineCheckbox1" value="option1"> 1asdadasdasd
+                                                </label>
+                                                <label class="checkbox-inline">
+                                                    <input type="checkbox" id="inlineCheckbox2" value="option2"> 2asda
+                                                </label>
+                                                <label class="checkbox-inline">
+                                                    <input type="checkbox" id="inlineCheckbox3" value="option3"> 3asdad asasasdasd
+                                                </label>
+                                                <label class="checkbox-inline">
+                                                    <input type="checkbox" id="inlineCheckbox1" value="option1"> 1asdasdasadasd
+                                                </label>
+                                                <label class="checkbox-inline">
+                                                    <input type="checkbox" id="inlineCheckbox2" value="option2"> 2asd adas sadad
+                                                </label>
+                                                <label class="checkbox-inline">
+                                                    <input type="checkbox" id="inlineCheckbox3" value="option3"> 3asdasd asd sada sd sad
+                                                </label>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
