--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -283,10 +283,10 @@
                     <form>
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title">Registro de usuarios</h4>
+                            <h3 class="modal-title"><b>Registro de usuarios</b></h3>
                         </div>
                         <div class="modal-body">
-                            <h2>Completa los siguientes campos para guardar tu registro:</h2>
+                            <p>Completa los siguientes campos para guardar tu registro:</p>
                             <hr>
                             <div class="panel panel-default">
                                 <div class="panel-body">
