Agregando Ajax para enviar datos de registro

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -462,7 +462,7 @@
             });
             $("#send-register").on("click", function (e) {
                 e.preventDefault();
-                if( $("#register-password".val != $("#register-confirm-password"))){
+                if( $("#register-password".val != $("#register-confirm-password").val())){
                     console.log("las contraseñas no coinciden");
                 } else {
                     $.ajax({
