Corrigiendo POST register

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -471,6 +471,7 @@
                         contentType: "application/json; charset=utf-8",
                         dataType: "json",
                         success: function(data){
+                            console.log(data);
                             window.location("https://cpromotion.herokuapp.com/");
                         },
                         failure: function(errMessage){
