--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -457,7 +457,7 @@
                 } else {
                     $.ajax({
                         type: "POST",
-                        url: "https://cpromotion.herokuapp.com/register_users",
+                        url: "https://cpromotion.herokuapp.com/register_users/",
                         data: JSON.stringify({
                             name: $("#register-name").val(),
                             last_name: $("#register-last-name").val(),
