Corrigiendo POST register

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -472,7 +472,7 @@
                         dataType: "json",
                         success: function(data){
                             console.log(data);
-                            window.location("https://cpromotion.herokuapp.com/");
+                            window.location.href = "https://cpromotion.herokuapp.com/";
                         },
                         failure: function(errMessage){
                             console.log("Error enviando datos de registro");
