Correccion modelo User registro

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -459,7 +459,7 @@
                         type: "POST",
                         url: "https://cpromotion.herokuapp.com/register_users/",
                         data: JSON.stringify({
-                            name: $("#register-name").val(),
+                            first_name: $("#register-name").val(),
                             last_name: $("#register-last-name").val(),
                             country: $("#register-country").val(),
                             city: $("#register-city").val(),
